<resources>
    <string name="app_name">Presh_Tic-Tac-Toe</string>
    <string name="welcome_text">Welcome!!!</string>
    <string name="p_tic">Presh\'s Tic-Tac-Toe</string>
    <string name="what_would">What would you like to do?</string>
    <string name="new_game">Play The Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="settings"> Edit My Settings</string>
    <string name="s_settings">Settings</string>
    <string name="players">Players</string>
    <string name="board_size">Board Size</string>
    <string name="music">Music</string>
    <string name="back_button">Back</string>
    <string name="player1">Player 1: 0</string>
    <string name="player2">Player 2: 0</string>
    <string name="reset_button">RESET</string>
    <string name="players_prompt">Choose a Player</string>
    <string-array name="_players">
        <item>1 Player</item>
        <item>2 Players</item>
    </string-array>
    <string name="board_prompt">Choose a Board Size</string>
    <string-array name="_boardSizes">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="submitButton">Submit</string>
    <string name="music_on">Music</string>
</resources>
