<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/tic_tac_toe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.presh_tic_tac_toe._3X3Activity"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/interface_layout"
        >

        <TextView
            android:id="@+id/text_view_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abril_fatface"
            android:freezesText="true"
            android:text="@string/player1"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_p1"
            android:fontFamily="@font/abril_fatface"
            android:freezesText="true"
            android:text="@string/player2"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/reset_button"
            android:textSize="24sp"
            android:fontFamily="@font/abril_fatface"/>

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interface_layout">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="48dp">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/button_00"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_03"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_04"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/button_10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_12"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_13"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/button_20"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_21"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_22"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_23"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_24"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:text="X"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/button_30"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_31"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_32"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_33"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_34"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:text="X"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/button_40"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_41"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/button_42"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_43"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:text="O"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />
                <Button
                    android:id="@+id/button_44"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/pacifico"
                    android:freezesText="true"
                    android:text="X"
                    android:textColor="@android:color/background_light"
                    android:textSize="32sp" />

            </TableRow>
        </TableLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/back_button"
        android:textSize="20sp"
        android:fontFamily="@font/abril_fatface"
        android:background="@drawable/small_green_rec"
        android:onClick="WelcomeActivity"/>
</RelativeLayout>
